<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>de.dhbw.woped</groupId>
		<artifactId>WoPeD</artifactId>
		<version>${revision}</version>
	</parent>

	<artifactId>WoPeD-Starter</artifactId>
	<packaging>jar</packaging>
	<name>WoPeD-Starter</name>

	<properties>
		<!-- plugins -->
		<maven.assembly.plugin.version>2.4</maven.assembly.plugin.version>
		<!-- dependencies -->
		<dep.version>1.0-SNAPSHOT</dep.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>sh.tak.appbundler</groupId>
				<artifactId>appbundle-maven-plugin</artifactId>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>flatten-maven-plugin</artifactId>
					<version>1.2.3</version>
					<configuration>
						<updatePomFile>true</updatePomFile>
						<flattenMode>resolveCiFriendliesOnly</flattenMode>
					</configuration>
					<executions>
						<execution>
							<id>flatten</id>
							<phase>process-resources</phase>
							<goals>
								<goal>flatten</goal>
							</goals>
						</execution>
						<execution>
							<id>flatten.clean</id>
							<phase>clean</phase>
							<goals>
								<goal>clean</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${maven.assembly.plugin.version}</version>
					<configuration>
						<descriptorRefs>
							<descriptorRef>jar-with-dependencies</descriptorRef>
						</descriptorRefs>
						<archive>
							<manifest>
								<mainClass>org.woped.starter.RunWoPeD</mainClass>
							</manifest>
						</archive>
					</configuration>
					<executions>
						<execution>
							<id>make-assembly</id>
							<phase>package</phase>
							<goals>
								<goal>single</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.7</version>
					<configuration>
						<skip>false</skip>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencies>
		<dependency>
			<groupId>de.dhbw.woped</groupId>
			<artifactId>WoPeD-CommonLibs</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>de.dhbw.woped</groupId>
			<artifactId>WoPeD-Editor</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>de.dhbw.woped</groupId>
			<artifactId>WoPeD-BPELExport</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>de.dhbw.woped</groupId>
			<artifactId>WoPeD-Configuration</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>de.dhbw.woped</groupId>
			<artifactId>WoPeD-GUI</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>de.dhbw.woped</groupId>
			<artifactId>WoPeD-Core</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>de.dhbw.woped</groupId>
			<artifactId>WoPeD-FileInterface</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>de.dhbw.woped</groupId>
			<artifactId>WoPeD-QualAnalysis</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>de.dhbw.woped</groupId>
			<artifactId>WoPeD-Flamingo</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>de.dhbw.woped</groupId>
			<artifactId>WoPeD-AProMoRe</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>de.dhbw.woped</groupId>
			<artifactId>WoPeD-QuantAnalysis</artifactId>
			<version>${project.version}</version>
		</dependency>
	</dependencies>
</project>